--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@ title: Milagros Rodriguez Caton # your name (or website title) here
 logo: "/images/IMG_5791.JPG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   First description 
-  <br><br>
+  <Asociate Research Scientist><br>
   Second description 
-  <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <Lamont-Doherty Earth Observatory><Columbia University>
+  <a href="https://www.linkedin.com/in/milagros-rodriguez-caton-2064251a1/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
